--- a/index.ipynb
+++ b/index.ipynb
@@ -236,11 +236,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Mal') # add code here"
+    "countries.append('Malta') # add code here"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append # add code here"
    ]
   },
   {
