Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries =  # add code here"
+    "countries[] =  # add code here"
    ]
   },
   {
