--- a/index.ipynb
+++ b/index.ipynb
@@ -311,11 +311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[] =  # add code here"
+    "countries[6] ='USA'  # add code here"
    ]
   },
   {
