--- a/index.ipynb
+++ b/index.ipynb
@@ -447,7 +447,7 @@
    },
    "outputs": [],
    "source": [
-    "unique_countries  # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
+    "unique_countries = list(uniq) # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
     "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland'] Note: order of countries may be different"
    ]
   },
