Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -441,13 +441,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "unique_countries = list(uniq) # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
+    "unique_countries = list(unique_countries) # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
     "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland'] Note: order of countries may be different"
    ]
   },
@@ -464,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = None\n",
+    "num_of_repeats = len(co)\n",
     "num_of_repeats # 3"
    ]
   },
